# owow-backend

./: .dockerignore  .editorconfig  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: formatting.yml  tests.yml
deploy/: docker-compose.dev.yml  docker-compose.otlp.yml  otel-collector-config.yml
owow_backend/: __init__.py  __main__.py  server_config.py  settings.py
owow_backend/core/: __init__.py
owow_backend/core/schema/: api_response.py  common_response_schema.py
owow_backend/core/utils/: case_converter.py  constants.py  logging.py  open_telemetry_config.py
owow_backend/db/: __init__.py
owow_backend/db/dao/: file_dao.py  user_dao.py
owow_backend/db/models/: __init__.py  base_document.py  file_model.py  user_model.py
owow_backend/middlewares/: __init__.py  logging_middleware.py
owow_backend/repository/: __init__.py  http_repository.py
owow_backend/service/: __init__.py  async_http_service.py  doc_service.py  predibase_service.py
owow_backend/web/: application.py  hypercorn_app.py  lifetime.py
owow_backend/web/api/: router.py
owow_backend/web/api/docs/: __init__.py  views.py
owow_backend/web/api/echo/: __init__.py  views.py
owow_backend/web/api/file/: __init__.py  controller.py  views.py
owow_backend/web/api/monitoring/: __init__.py  views.py
owow_backend/web/api/user/: __init__.py  controller.py  schema.py  views.py
tests/: __init__.py  conftest.py  test_file.py  test_owow_health.py  test_user.py
