[tool.poetry]
name = "owow-backend"
version = "0.1.0"
description = ""
authors = ["Vetrichelvan <pythonhubdev@gmail.com>"]
readme = "README.md"
packages = [
    { include = "owow_backend" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
hypercorn = "^0.17.3"
opentelemetry-api = "^1.26.0"
opentelemetry-sdk = "^1.26.0"
opentelemetry-exporter-otlp = "^1.26.0"
opentelemetry-instrumentation = "^0.47b0"
opentelemetry-instrumentation-fastapi = "^0.47b0"
opentelemetry-instrumentation-sqlalchemy = "^0.47b0"
orjson = "^3.10.5"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
loguru = "^0.7.2"
beanie = "^1.26.0"
polars = "^1.3.0"
fastexcel = "^0.11.5"
httpx = "^0.27.0"
python-multipart = "^0.0.9"
python-docx = "^1.1.2"
pymupdf = "^1.24.9"
predibase = "^2024.7.2"
python-pptx = "^0.6.23"
bcrypt = "^4.2.0"


[tool.poetry.group.development.dependencies]
pre-commit = "^3.7.1"
black = { extras = ["d"], version = "^24.4.2" }
pytest = "^8.2.2"
ruff = "^0.5.2"
pytest-cov = "^5.0.0"
isort = "^5.13.2"
mypy = "^1.10.1"
pytest-env = "^1.1.3"


[tool.black]
line-length = 120
preview = true

[tool.ruff]
src = ["."]
target-version = "py312"
fix = true
output-format = "full"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "N801", "N802", "N803", "N805", "N806", "Q0"]
ignore = ["F401"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
force-wrap-aliases = true
split-on-trailing-comma = true

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["owow_backend"]
line_length = 120
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true


[tool.ruff.lint.pydocstyle]
convention = "pep257"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.pylint]
allow-magic-value-types = ["int", "str", "float", "bytes"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = [
    "ENVIRONMENT=pytest",
    "DB_BASE=admin",
]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
